--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "balloon",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite ./testing",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.0",
+    "babel-jest": "^27.4.6",
+    "jest": "^27.4.7",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
